[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-tui"
dynamic = ["version"]
description = 'Inspect and run Django Commands in a text-based user interface (TUI).'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "django",
  "tui",
  "textual"
]
authors = [
  { name = "Anže Pečar", email = "anze@pecar.me" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "django>=3.2",
  "textual",
  "trogon",
]

[project.urls]
Documentation = "https://github.com/anze3db/django-tui#readme"
Issues = "https://github.com/anze3db/django-tui/issues"
Source = "https://github.com/anze3db/django-tui"
Changelog = "https://github.com/anze3db/django-tui/blob/main/CHANGELOG.md"
Mastodon = "https://fosstodon.org/@anze3db"
Twitter = "https://twitter.com/anze3db"

[tool.hatch.version]
path = "src/django_tui/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.1.6",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/django_tui tests}"
style = [
  "ruff {args:.}",
  "ruff format --check {args:.}",
]
fmt = [
  "ruff format {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["django_tui"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["django_tui", "tests"]
branch = true
parallel = true
omit = [
  "src/django_tui/__about__.py",
]

[tool.coverage.paths]
django_tui = ["src/django_tui", "*/django-tui/src/django_tui"]
tests = ["tests", "*/django-tui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
